# RaspberryPi

./: LapseCam.py  MyS_withIMG.py  README.md  control.php  mc.qr.py  mc.qr.txt  pvout_upload.py  raspiLapseCam.py  raspistill  timelapse
FTSE/: README.md  ftse.db  ftse.py  ftseCreateDB.py  ftseDisplay.py  ftseDumper.py  ftseGetSymbol.py  ftsePrimeDB.py  ftseSqlite.py  ftseTicker.py  ftseWebServ.py  ftseWebServer.py  ftse_test.py  ftseclearLCD.py  index.html
FTSE/cgi-bin/: cgitest.py  ftse.py  ftseupd.py
MonoLCD/: README.md  RPi.I2C.Net.sln
MonoLCD/I2C_LCD/: I2C_LCD.csproj  Program.cs
MonoLCD/I2C_LCD/Properties/: AssemblyInfo.cs
MonoLCD/RPi.I2C.Net/: I2CBus.cs  I2CNativeLib.cs  II2CBus.cs  RPi.I2C.Net.csproj
MonoLCD/RPi.I2C.Net/Properties/: AssemblyInfo.cs
Unified_LCD/: CMakeLists.txt  LCD.readme.md  Makefile  README.md  charGenLCD.c  commonLcd.c  commonLcd.h  get31855.c  get31855.h  get6675.c  get6675.h  gpio31855.c  gpio6675.c  gpioLcd.c  gpioLcd.h  gpioboth.c  gpiomain.c  hd44780.h  i2cLcd.c  i2cLcd.h  i2cmain.c  ipLcd.c  ipLcd.h  ipTest.c  main.c  makefile  pcf31855.c  pcf6675.c  pcfLcd.c  pcfLcd.h  pcfboth.c  spiLcd.c  spiLcd.h  spimain.c  wP.c  wP.h
bare_metal/: Makefile  kernel.img  kernel.ld  kernel.list  kernel.map
bare_metal/source/: fish_dish.s
bmp180/: DBLite.hpp  README.md  bmp180.cpp  bmp180.py  bmp180.sqlite.py  bmp_data.sql  dbread.cpp  dbreadplot.py  falcon-json.c  mqttMessage.hpp  mqttSub.cpp  plotly.sqlite.py  readLorD.c  trig6675.cpp
brcm/: README.md  brcm.7z
cups/: cupsd.conf
matrix/: binClock.c  binClock.py  font0.py  ledreset.py  matrix.c  matrix1.c  matrix2.c  matrix3.c  matrix4.c  matrix4.py  matrix5.c  matrix5.py  matrix6.py
max7219/: BCDclock.c  CMakeCache.txt  CMakeLists.txt  LEDclock.c  LEDmain.c  LEDtest.c  MATRIXclock.c  MATRIXtest.c  Makefile  README.md  bmp180.cpp  ledspi.service  makefile  max7219.h  mqttMessage.cpp  mqttPub.cpp  oneshot.c  spiLED.c  spiLED.h  spiMATRIX.c  spiMATRIX.h  sqlF.c  sqlTar.c  sqlTariff.c  sqlTest.c  sqlt
