cmake_minimum_required (VERSION 2.8.11)
project (LEDspi)
add_executable(LEDspi sqlF.c spiLED.c)
add_executable(SQLTest sqlTest.c)
add_executable(LEDtest LEDtest.c spiLED.c)
add_executable(LEDclock LEDclock.c spiLED.c)
add_executable(bmp180 bmp180.cpp)
set_target_properties(bmp180 PROPERTIES COMPILE_FLAGS -pthread)
find_path(SQLITE3_INCLUDE_DIR sqlite3.h)
find_library(SQLITE3_LIBRARY sqlite3)
find_library(PTHREAD_LIB pthread)

target_link_libraries(LEDspi ${SQLITE3_LIBRARY})
target_link_libraries(SQLTest ${SQLITE3_LIBRARY})
target_link_libraries(bmp180 ${SQLITE3_LIBRARY} ${PTHREAD_LIB})
